--- a/screen.css
+++ b/screen.css
@@ -18,14 +18,14 @@ html > body {
 }
 
 acronym, .titleTip {
-  border-bottom: 1px dotted rgb(61,92,122);
+  border-bottom: 1px dotted #A68C53;
   cursor: help;
   margin: 0;
   padding: 0 0 0.4px 0;
 }
 
 a {
-  color: rgb(61,92,122);
+  color: #A68C53;
   background-color: transparent;
   text-decoration: underline;
   margin: 0;
@@ -33,7 +33,7 @@ a {
 }
 
 a:hover {
-  color: rgb(117,144,174);
+  color: #7590AE;
   text-decoration: none;
 }
 
@@ -90,38 +90,9 @@ dd {
 
 /* ##### Header ##### */
 
-.superHeader {
-  color: rgb(130,128,154);
-  background-color: rgb(33,50,66);
-  text-align: right;
-  margin: 0;
-  padding: 0.5ex 10px;
-}
-
-.superHeader span {
-  color: rgb(195,196,210);
-  background-color: transparent;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.superHeader a {
-  color: rgb(195,196,210);
-  background-color: transparent;
-  text-decoration: none;
-  margin: 0;
-  padding: 0 0.25ex 0 0;
-}
-
-.superHeader a:hover {
-  color: rgb(193,102,90);
-  background-color: transparent;
-  text-decoration: none;
-}
-
 .midHeader {
-  color: white;
-  background-color: rgb(61,92,122);
+  color: #996633;
+  background-color: #E6DFCF; 
   margin: 0;
   padding: 0.26ex 10px;
 }
@@ -159,14 +130,14 @@ dd {
 }
 
 .headerLinks a:hover {
-  color: rgb(195,196,210);
+  color: #C3C4D2;
   background-color: transparent;
   text-decoration: underline;
 }
 
 .subHeader {
   color: white;
-  background-color: rgb(117,144,174);
+  background-color: #A68C53; 
   margin: 0;
   padding: 0.5ex 10px;
 }
@@ -182,7 +153,7 @@ dd {
 }
 
 .subHeader a:hover, .subHeader .highlight {
-  color: rgb(255,204,0);
+  color: #FFCC00;
   background-color: transparent;
   text-decoration: none;
 }
@@ -197,7 +168,7 @@ dd {
 }
 
 #mainbody h1 {
-  color: rgb(117,144,174);
+  color: #7590AE;
   background-color: transparent;
   font-family: "trebuchet ms", verdana, helvetica, arial, sans-serif;
   font-size: 200%;
@@ -206,7 +177,7 @@ dd {
 }
 
 #mainbody h2 {
-  color: rgb(61,92,122);
+  color: #A68C53;
   background-color: transparent;
   font-family: "trebuchet ms", verdana, helvetica, arial, sans-serif;
   font-weight: normal;
@@ -222,7 +193,7 @@ dd {
 }
 
 .newsHeading {
-  color: rgb(61,92,122);
+  color: #A68C53;
   background-color: transparent;
   font-family: "trebuchet ms", verdana, helvetica, arial, sans-serif;
   font-size: 145%;
@@ -233,7 +204,7 @@ dd {
 }
 
 .newsHeading:hover {
-  color: rgb(117,144,174);
+  color: #7590AE;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -256,7 +227,7 @@ dd {
 }
 
 .more a {
-  color: rgb(61,92,122);
+  color: #A68C53;
   background-color: transparent;
   font-size: 92%;
   text-decoration: underline;
@@ -265,7 +236,7 @@ dd {
 }
 
 .more a:hover {
-  color: rgb(117,144,174);
+  color: #7590AE;
   text-decoration: none;
 }
 
@@ -276,7 +247,7 @@ dd {
 .quarter, .oneThird, .half, .twoThirds, .fullWidth {
   margin: 1em 0;
   float: left;
-  border-left: 1px solid rgb(204,204,204);
+  border-left: 1px solid #CCCCCC;
 }
 
 .quarter {
@@ -317,7 +288,7 @@ dd {
 }
 
 .dividingBorderAbove {
-  border-top: 1px solid rgb(204,204,204);
+  border-top: 1px solid #CCCCCC;
 }
 
 /* More elegant alternatives to .noBorderOnLeft & .dividingBorderAbove
@@ -329,7 +300,7 @@ dd {
  * }
  *
  * .rowOfBoxes + .rowOfBoxes {
- *   border-top: 1px solid rgb(204,204,204);
+ *   border-top: 1px solid #CCCCCC;
  * }
  */
 
@@ -337,8 +308,9 @@ dd {
 /* ##### Footer ##### */
 
 #footer {
-  color: rgb(51,51,102);
-  background-color: rgb(239,239,239);
+  color: #515166);
+/*  background-color: #EFEFEF; */
+  background-color: #F3F2EB; 
   font-size: 87%;
   text-align: center;
   line-height: 1.25em;
@@ -348,7 +320,7 @@ dd {
 }
 
 #footer a {
-  color: rgb(0,68,204);
+  color: #0044CC;
   background-color: transparent;
   text-decoration: underline;
 }
